--- a/8.0 Project Planning/8.3 Pert Chart.md
+++ b/8.0 Project Planning/8.3 Pert Chart.md
@@ -2,3 +2,8 @@
 
 <img src = "image8.0/Pert1.jpg" width = "600" >
 <img src = "image8.0/Pert2.jpg" width = "600" >
+
+
+### Path: A-B-C-D-E-F-G-H-I-J-K-L-M-N
+### Length: 1+1+1+1+1+1+2+2+3+5+10+10+1+1
+### Total duration: 40 days
