Update 9.3 Non-functional Requirement (performance and control).md

--- a/9.0 Requirement Analysis/9.3 Non-functional Requirement (performance and control).md
+++ b/9.0 Requirement Analysis/9.3 Non-functional Requirement (performance and control).md
@@ -1,1 +1,3 @@
+The application for the loan must be easy to use and understand for the employees and admin. It requires users to log in with a password to ensure they are KADA employees and to protect their account details. The system also needs to ensure that the login process does not take a long time. Instructions on the website need to be clear so that users do not confuse the loan application with cooperative member registration. Additionally, the system should automatically calculate the payment amount, and users should have the flexibility to choose their preferred payment methods. 
 
+ 
