Update 9.4 Logical DFD AS-IS system (Context Diagram, Diagram 0, Child) .md

--- a/9.0 Requirement Analysis/9.4 Logical DFD AS-IS system (Context Diagram, Diagram 0, Child) .md
+++ b/9.0 Requirement Analysis/9.4 Logical DFD AS-IS system (Context Diagram, Diagram 0, Child) .md
@@ -1,1 +1,8 @@
+Context diagram of KADA MANGEMENT INFORMATION SYSTEM 
+<img src=" " width="600">
 
+Diagram 0 of KADA MANGEMENT INFORMATION SYSTEM 
+<img src=" " width="600">
+
+Child diagram  
+<img src=" " width="600">
