Update 4.0 Problem Statement report.md

--- a/4.0 Problem Statement/4.0 Problem Statement report.md
+++ b/4.0 Problem Statement/4.0 Problem Statement report.md
@@ -1,6 +1,6 @@
-##4.0 PROBLEM STATEMENT
+4.0 PROBLEM STATEMENT🙋‍♀️🙋‍♀️🙋‍♀️🙋‍♀️
 
-####The cooperative (koperasi) run by Lembaga Kemajuan Pertanian Kemubu (KADA) offers significant benefits to its employees, such as loans and a retirement fund. However, a cumbersome manual registration procedure and a restrictive membership limit are the cooperative's two main problems, which restrict its efficiency and accessibility. 
+The cooperative (koperasi) run by Lembaga Kemajuan Pertanian Kemubu (KADA) offers significant benefits to its employees, such as loans and a retirement fund. However, a cumbersome manual registration procedure and a restrictive membership limit are the cooperative's two main problems, which restrict its efficiency and accessibility. 
 
 At this point, employees must fill out a manual form to register as a member of the KADA cooperative. This outdated method is hard to use and results in a lot of mistakes and inefficiency Employees must complete paper forms, which can be cumbersome and error prone. Employees are discouraged from enrolling by this cumbersome process as they may think it is too complex or inconvenient. Additionally, the registration form can only be found in Malay, which presents a major problem in increasing the number of employees registered under the cooperative. This is because they might be some employees do not know the Malay language well. The cooperative's reach is restricted by this linguistic barrier, which also decreases the benefits of KADA's diversity and accessibility. 
 
