Update 9.4 Logical DFD AS-IS system (Context Diagram, Diagram 0, Child) .md

--- a/9.0 Requirement Analysis/9.4 Logical DFD AS-IS system (Context Diagram, Diagram 0, Child) .md
+++ b/9.0 Requirement Analysis/9.4 Logical DFD AS-IS system (Context Diagram, Diagram 0, Child) .md
@@ -1,5 +1,5 @@
 Context diagram of KADA MANGEMENT INFORMATION SYSTEM 
-<img src=" " width="600">
+<img src="9.0 Requirement Analysis/image9.0/context diagram.jpg " width="600">
 
 Diagram 0 of KADA MANGEMENT INFORMATION SYSTEM 
 <img src=" " width="600">
