Update 9.4 Logical DFD AS-IS system (Context Diagram, Diagram 0, Child) .md

--- a/9.0 Requirement Analysis/9.4 Logical DFD AS-IS system (Context Diagram, Diagram 0, Child) .md
+++ b/9.0 Requirement Analysis/9.4 Logical DFD AS-IS system (Context Diagram, Diagram 0, Child) .md
@@ -6,3 +6,4 @@ Diagram 0 of KADA MANGEMENT INFORMATION SYSTEM
 
 Child diagram  
 <img src=" " width="600">
+![context diagram](https://github.com/Elijah0413/TechMedico_Project_SAD_20232024/assets/150232192/96c3c66f-7e7f-49e3-a59f-8182d1b0f1bc)
