Update 9.4 Logical DFD AS-IS system (Context Diagram, Diagram 0, Child) .md

--- a/9.0 Requirement Analysis/9.4 Logical DFD AS-IS system (Context Diagram, Diagram 0, Child) .md
+++ b/9.0 Requirement Analysis/9.4 Logical DFD AS-IS system (Context Diagram, Diagram 0, Child) .md
@@ -1,9 +1,11 @@
 Context diagram of KADA MANGEMENT INFORMATION SYSTEM 
-<img src="9.0 Requirement Analysis/image9.0/context diagram.jpg " width="600">
+![context diagram](https://github.com/Elijah0413/TechMedico_Project_SAD_20232024/assets/150232192/96c3c66f-7e7f-49e3-a59f-8182d1b0f1bc)
 
 Diagram 0 of KADA MANGEMENT INFORMATION SYSTEM 
-<img src=" " width="600">
+![diagram 0](https://github.com/Elijah0413/TechMedico_Project_SAD_20232024/assets/150232192/63707555-6cd6-4117-8351-8af5b6d840d5)
+
 
 Child diagram  
-<img src=" " width="600">
-![context diagram](https://github.com/Elijah0413/TechMedico_Project_SAD_20232024/assets/150232192/96c3c66f-7e7f-49e3-a59f-8182d1b0f1bc)
+![child diagram](https://github.com/Elijah0413/TechMedico_Project_SAD_20232024/assets/150232192/46c12e41-9503-46f2-be57-a1180117968a)
+
+
