Update 9.4 Logical DFD AS-IS system (Context Diagram, Diagram 0, Child) .md

--- a/9.0 Requirement Analysis/9.4 Logical DFD AS-IS system (Context Diagram, Diagram 0, Child) .md
+++ b/9.0 Requirement Analysis/9.4 Logical DFD AS-IS system (Context Diagram, Diagram 0, Child) .md
@@ -1,11 +1,13 @@
-Context diagram of KADA MANGEMENT INFORMATION SYSTEM 
-![context diagram](https://github.com/Elijah0413/TechMedico_Project_SAD_20232024/assets/150232192/96c3c66f-7e7f-49e3-a59f-8182d1b0f1bc)
+# KADA Management Information System
 
-Diagram 0 of KADA MANGEMENT INFORMATION SYSTEM 
-![diagram 0](https://github.com/Elijah0413/TechMedico_Project_SAD_20232024/assets/150232192/63707555-6cd6-4117-8351-8af5b6d840d5)
+## Context Diagram
+<img src="https://github.com/Elijah0413/TechMedico_Project_SAD_20232024/assets/150232192/96c3c66f-7e7f-49e3-a59f-8182d1b0f1bc" alt="context diagram" width="600"/>
 
+## Diagram 0
+<img src="https://github.com/Elijah0413/TechMedico_Project_SAD_20232024/assets/150232192/63707555-6cd6-4117-8351-8af5b6d840d5" alt="diagram 0" width="600"/>
 
-Child diagram  
-![child diagram](https://github.com/Elijah0413/TechMedico_Project_SAD_20232024/assets/150232192/46c12e41-9503-46f2-be57-a1180117968a)
+## Child Diagram
+<img src="https://github.com/Elijah0413/TechMedico_Project_SAD_20232024/assets/150232192/46c12e41-9503-46f2-be57-a1180117968a" alt="child diagram" width="600"/>
+
 
 
