--- a/3.0 background/3.0 Background report.md
+++ b/3.0 background/3.0 Background report.md
@@ -1,5 +1,7 @@
 ## 3.0 BACKGROUND STUDY 📚📚📚📚
 
+<img src ="image 3.0/logo.png" width="300">
+
 #### Lembaga Kemajuan Pertanian Kemubu(KADA) is an agency under the Ministry of Agriculture and Food Security, established on March 30, 1972, under Section 4 (1) of Act 69, the Kemubu Agricultural Development Authority Act 1972, Lembaga Kemajuan Pertanian Kemubu (KADA) is an agency under the Ministry of Agriculture and Food Security. On March 2, 1973, YAB Tun Hj Abdul Razak Bin Hussein, the second prime minister of Malaysia, officially created it. KADA is a leading organization dedicated to improving the economic status of farmers and increasing the country's food production, especially in rice and paddy to fulfill domestic needs. To bring farmers' per capita earnings into line with national statistics, it seeks to help agricultural families. Additionally, KADA works to enhance agriculture in the Kemubu region and builds and strengthens farmer institutions.  
 
 #### KADA offers a wide range of services,we going to focus on cooperatives section that KADA held to open an investment space for the members registered under it.KADA offers its members that registered under the cooperative a variety of financial benefits,including investment such as “Modal Syer” and “Modal Yuran” ,loans to support personal and business needs.The are five main loan plan for member registered under it which are “Pinjaman Al Bai”, “Pinjaman Al Innah”, “Pinjaman skim khas”, “Pinjaman road tax and insurance” and “Pinjaman Al qardhul Hasan”In order to help members safely plan for the future, KADA also provides a savings plan created especially for retirement funds. These all services are designed to support members' financial development and stability, promoting a community of financially independent people. 
