Update 3.0 Background report.md

--- a/3.0 background/3.0 Background report.md
+++ b/3.0 background/3.0 Background report.md
@@ -2,14 +2,16 @@
 
 <img src ="image 3.0/logo.png" width="300">
 
-#### Lembaga Kemajuan Pertanian Kemubu(KADA) is an agency under the Ministry of Agriculture and Food Security, established on March 30, 1972, under Section 4 (1) of Act 69, the Kemubu Agricultural Development Authority Act 1972, Lembaga Kemajuan Pertanian Kemubu (KADA) is an agency under the Ministry of Agriculture and Food Security. On March 2, 1973, YAB Tun Hj Abdul Razak Bin Hussein, the second prime minister of Malaysia, officially created it. KADA is a leading organization dedicated to improving the economic status of farmers and increasing the country's food production, especially in rice and paddy to fulfill domestic needs. To bring farmers' per capita earnings into line with national statistics, it seeks to help agricultural families. Additionally, KADA works to enhance agriculture in the Kemubu region and builds and strengthens farmer institutions.  
+<p>
 
-#### KADA offers a wide range of services,we going to focus on cooperatives section that KADA held to open an investment space for the members registered under it.KADA offers its members that registered under the cooperative a variety of financial benefits,including investment such as “Modal Syer” and “Modal Yuran” ,loans to support personal and business needs.The are five main loan plan for member registered under it which are “Pinjaman Al Bai”, “Pinjaman Al Innah”, “Pinjaman skim khas”, “Pinjaman road tax and insurance” and “Pinjaman Al qardhul Hasan”In order to help members safely plan for the future, KADA also provides a savings plan created especially for retirement funds. These all services are designed to support members' financial development and stability, promoting a community of financially independent people. 
+Lembaga Kemajuan Pertanian Kemubu(KADA) is an agency under the Ministry of Agriculture and Food Security, established on March 30, 1972, under Section 4 (1) of Act 69, the Kemubu Agricultural Development Authority Act 1972, Lembaga Kemajuan Pertanian Kemubu (KADA) is an agency under the Ministry of Agriculture and Food Security. On March 2, 1973, YAB Tun Hj Abdul Razak Bin Hussein, the second prime minister of Malaysia, officially created it. KADA is a leading organization dedicated to improving the economic status of farmers and increasing the country's food production, especially in rice and paddy to fulfill domestic needs. To bring farmers' per capita earnings into line with national statistics, it seeks to help agricultural families. Additionally, KADA works to enhance agriculture in the Kemubu region and builds and strengthens farmer institutions.  
 
-#### Lembaga Kemajuan Pertanian Kemubu (KADA) cooperative(koperasi) will include service like investment, saving plan for retirement fund and a loan facility. Employees can apply for membership in this cooperative by paying a registration fee of RM 55 and investing RM 300 in unit shares. So, with a total of RM 355 to become a member. Members can acquire shares for RM300, which may be paid in lump sum or monthly salary deductions, with RM50 deducted over six months and an additional RM5 as a contribution to the member welfare fund. As required by the Malaysian Cooperative Commission, members must pay their share, up to a maximum of RM10,000, in order to qualify for loans. For membership fees, there is a minimum payment of RM35.KADA also differentiates between share capital, which is required for loan eligibility, and savings, which serve different purposes. 
+KADA offers a wide range of services,we going to focus on cooperatives section that KADA held to open an investment space for the members registered under it.KADA offers its members that registered under the cooperative a variety of financial benefits,including investment such as “Modal Syer” and “Modal Yuran” ,loans to support personal and business needs.The are five main loan plan for member registered under it which are “Pinjaman Al Bai”, “Pinjaman Al Innah”, “Pinjaman skim khas”, “Pinjaman road tax and insurance” and “Pinjaman Al qardhul Hasan”In order to help members safely plan for the future, KADA also provides a savings plan created especially for retirement funds. These all services are designed to support members' financial development and stability, promoting a community of financially independent people. 
 
-#### The system will not be able to allow the public to join its cooperative membership through the system. Membership is limited to those who register and fulfil the requirements established by KADA. Furthermore, KADA does not provide membership cards to members who have successfully registered as members. Serving registered members with perks and services designed only for them continues to be the major priority. 
+Lembaga Kemajuan Pertanian Kemubu (KADA) cooperative(koperasi) will include service like investment, saving plan for retirement fund and a loan facility. Employees can apply for membership in this cooperative by paying a registration fee of RM 55 and investing RM 300 in unit shares. So, with a total of RM 355 to become a member. Members can acquire shares for RM300, which may be paid in lump sum or monthly salary deductions, with RM50 deducted over six months and an additional RM5 as a contribution to the member welfare fund. As required by the Malaysian Cooperative Commission, members must pay their share, up to a maximum of RM10,000, in order to qualify for loans. For membership fees, there is a minimum payment of RM35.KADA also differentiates between share capital, which is required for loan eligibility, and savings, which serve different purposes. 
 
-#### There is also many benefits to be involved in KADA cooperative offers the benefits which include a savings plan for retirement, with an annual dividend of approximately 4.2% on the shares. Additionally, members can apply for loans up to RM 20,000. Besides,member welfare fund supports member welfare activities including Hajj and Umrah payment, death benefits for members and their spouses, and other member welfare programmed. To help members after retirement and ensure their financial stability and future demands are met, fixed savings plans are also offered. 
+The system will not be able to allow the public to join its cooperative membership through the system. Membership is limited to those who register and fulfil the requirements established by KADA. Furthermore, KADA does not provide membership cards to members who have successfully registered as members. Serving registered members with perks and services designed only for them continues to be the major priority. 
 
- 
+There is also many benefits to be involved in KADA cooperative offers the benefits which include a savings plan for retirement, with an annual dividend of approximately 4.2% on the shares. Additionally, members can apply for loans up to RM 20,000. Besides,member welfare fund supports member welfare activities including Hajj and Umrah payment, death benefits for members and their spouses, and other member welfare programmed. To help members after retirement and ensure their financial stability and future demands are met, fixed savings plans are also offered. 
+
+ </p>
