Update 5.0 Proposed Solutions report.md

--- a/5.0 Proposed Solutions/5.0 Proposed Solutions report.md
+++ b/5.0 Proposed Solutions/5.0 Proposed Solutions report.md
@@ -1,21 +1,23 @@
 ## 5.0 Proposed Solutions
 
-#### The present manual registration method has issues that the e-registration system was created to solve this problem. Every operation and information in this system is computerized. It's essential to take into consideration the feasibility of the proposed system which are operational, technological, and financial aspects to solve the difficulties the KADA cooperative is facing and provide an achievable solution. 
+<p>
 
-#### Operation Feasibility: Our suggestion is to change from a manual registration procedure to an online automated method to make it simpler and quicker. The current system is prone to errors and inefficient, as it requires physical forms. We suggest that the system can mainly using drop down box to provide selection for the register members so that users do not need to enter all the information on their own. This can reduce the chance of typos and make the Data Mining process. We also suggest that the registration form should also be provided in Chinese, English, and Malay. To enable more employees to join, we suggest increasing the membership limit from 500 to a larger figure. This requires altering methods to efficiently handle additional members by establishing a offer of multilingual guidance in the registration. Other than that, is enhanced the financial reporting to evaluate the cooperative's financial situation, particularly its profit or loss. Transparency and accountability within the cooperative will be promoted by making financial reports available to members via the web system. 
+The present manual registration method has issues that the e-registration system was created to solve this problem. Every operation and information in this system is computerized. It's essential to take into consideration the feasibility of the proposed system which are operational, technological, and financial aspects to solve the difficulties the KADA cooperative is facing and provide an achievable solution. 
+
+Operation Feasibility: Our suggestion is to change from a manual registration procedure to an online automated method to make it simpler and quicker. The current system is prone to errors and inefficient, as it requires physical forms. We suggest that the system can mainly using drop down box to provide selection for the register members so that users do not need to enter all the information on their own. This can reduce the chance of typos and make the Data Mining process. We also suggest that the registration form should also be provided in Chinese, English, and Malay. To enable more employees to join, we suggest increasing the membership limit from 500 to a larger figure. This requires altering methods to efficiently handle additional members by establishing a offer of multilingual guidance in the registration. Other than that, is enhanced the financial reporting to evaluate the cooperative's financial situation, particularly its profit or loss. Transparency and accountability within the cooperative will be promoted by making financial reports available to members via the web system. 
 
 <img src = "image5.0/DropDownBox.jpg" width = "400"  align = "center">
  
-#### Technical Feasibility: Creating a secure online platform is crucial. This platform needs to support financial information and member privacy will be ensured by using secure authentication and robust encryption to ensure data security and privacy.  
+Technical Feasibility: Creating a secure online platform is crucial. This platform needs to support financial information and member privacy will be ensured by using secure authentication and robust encryption to ensure data security and privacy.  
 
-#### In Software-wise, Microsoft Word will be used for financial reporting, making it possible to create and handle thorough financial documentation. The user interface will be designed and prototyped using Figma and Lucidchart to do flowchart.  
+In Software-wise, Microsoft Word will be used for financial reporting, making it possible to create and handle thorough financial documentation. The user interface will be designed and prototyped using Figma and Lucidchart to do flowchart.  
 
 <img src = "image5.0/SoftWare.jpg" width = "400"  align = "center">
 
-#### For hardware, in order to create and execute the system, the minimum specifications for a laptop or computer include having at least Windows 7 as the operating system. Moreover, the system requires at least Intel i3 processor to make sure smooth execution of performance. Additionally, a minimum of 4GB of RAM is necessary to handle the system operation efficiently. For storage, the recommended specification should be at least 256GB of hard drive storage for sufficient data capacity. 
+For hardware, in order to create and execute the system, the minimum specifications for a laptop or computer include having at least Windows 7 as the operating system. Moreover, the system requires at least Intel i3 processor to make sure smooth execution of performance. Additionally, a minimum of 4GB of RAM is necessary to handle the system operation efficiently. For storage, the recommended specification should be at least 256GB of hard drive storage for sufficient data capacity. 
 
-#### These hardware and software elements working together will provide a reliable and secure system that satisfies the requirements of the cooperative. 
+These hardware and software elements working together will provide a reliable and secure system that satisfies the requirements of the cooperative. 
 
 <img src = "image5.0/HardWare.jpg" width = "400"  align = "center">
 
-  
+</p>
